nerv/main/cluster/apps/steam-gateway/app/basicauth.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: steam-gateway-basicauth
  namespace: apps
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: steam-gateway
  basicAuth:
    users:
      name: steam-gateway-basicauth
