nerv/main/cluster/apps/steam-gateway/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: steam-gateway
  namespace: apps
spec:
  parentRefs:
    - name: internal
      namespace: networking-system
      sectionName: https
  hostnames:
    - steam.nerv.id
  rules:
    - backendRefs:
        - name: steam-gateway-app
          port: 3001
